# hammer-rs

./: Cargo.toml
examples/: demo.rs  window.rs
src/: lib.rs  renderer.rs
src/core/: Cargo.toml  build.rs  lib.rs  prelude.rs  window.rs
src/core/asset/: animation.rs  image.rs  mod.rs
src/core/ecs/: mod.rs
src/core/ecs/component/: animator.rs  camera.rs  collider.rs  mod.rs  sprite.rs
src/core/ecs/event/: collision.rs
src/core/ecs/system/: animation.rs  behaviour.rs  collision.rs  mod.rs
src/core/input/: keyboard.rs
src/core/renderer/gl/wrapper/: mod.rs  program.rs  shader.rs
src/core/scene/: mod.rs
src/core/src/: asset.rs  input.rs  lib.rs  prelude.rs  renderer.rs  window.rs
src/core/src/asset/: animation.rs  image.rs  mod.rs  sprite.rs
src/core/src/ecs/: mod.rs
src/core/src/ecs/component/: animator.rs  collider.rs  mod.rs  sprite.rs
src/core/src/ecs/event/: animation_finished.rs  collision.rs  mod.rs
src/core/src/ecs/system/: animation.rs  behaviour.rs  camera.rs  collision.rs  mod.rs  sprite.rs
src/core/src/input/: keyboard.rs  mod.rs
src/core/src/math/: mod.rs
src/core/src/renderer/: gl.rs  mod.rs
src/core/src/renderer/gl/: mod.rs  shader.rs  texture.rs
src/core/src/renderer/gl/wrapper/: array_buffer.rs  mod.rs  program.rs  shader.rs  texture.rs  vertex_array.rs
src/core/src/scene/: mod.rs
src/core/src/util/: counter.rs  mod.rs  stb_image.h  stb_image.rs
src/core/src/window/: window.rs
src/core/util/: mod.rs
src/editor/: Cargo.toml
src/window/: Cargo.toml  event.rs  lib.rs
src/window/windows/: mod.rs
(+2 files in other folders)
