[package]
name = "hammer_core"
version = "0.1.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]

[target.'cfg(windows)'.dependencies]
winapi = "*"
gdi32-sys = "*"
kernel32-sys = "*"
opengl32-sys = "*"
user32-sys = "*"

[dependencies]
gl = "*"
log = "*"
stb_image = { git = "https://github.com/servo/rust-stb-image" }
