[package]
name = "hammer-window"
version = "0.1.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]

[lib]
name = "hammer_window"
path = "lib.rs"

[dependencies]
log = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"
gdi32-sys = "*"
kernel32-sys = "*"
opengl32-sys = "*"
user32-sys = "*"
